--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   responsive_sizer: ^3.3.1
   shared_preferences: ^2.5.3
   auto_route: ^10.1.0+1
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +24,9 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   auto_route_generator: ^10.2.3  
   build_runner: ^2.5.4           
+
+
+flutter:
+  assets:
+    - assets/images/
+    - assets/images/onboarding/
