--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   shared_preferences: ^2.5.3
   auto_route: ^10.1.0+1
   flutter_svg: ^2.2.0
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -32,3 +34,5 @@ flutter:
     - assets/icons/
     - assets/images/onboarding/
     - assets/images/product_category/
+    - assets/images/product_images/
+    - assets/images/preview_images/
